--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
-h2 {
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 20px;
+}
+
+h1 {
     color: lightseagreen;
+}
+
+main, .gameSquare {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    height: 350px;
+    width: 350px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
 }
