--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     src: url('Gord-Quick-Font/gordqucikblack-p7erv.otf') format('opentype');
 }
 
+/* * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+} */
+
 :root {
     --font: 'Gord', Helvetica;
 }
@@ -16,20 +22,35 @@ h1 {
 .displayUsers {
     font-family: var(--font);
     display: flex;
-    gap: 116px; /* Adjusts spacing */
+    gap: 116px; 
     font-size: 18px;
 }
 
 .displayUsers > * {
     display: flex;
     flex-direction: column;
-    gap: 10px; /* Adjusts spacing */
+    gap: 10px; 
 }
 
 .displayStatus {
     font-family: var(--font);
     font-size: 18px;
     padding-top: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.restartBtn {
+    font-family: var(--font);
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    padding: 10px 10px;
 }
 
 /* FLEXBOX BODY FORMATTING */
