--- a/style.css
+++ b/style.css
@@ -56,11 +56,7 @@ h1 {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.restartBtn:hover {
-    color: #00afb9;
-}
-
-.newGameBtn:hover {
+.restartBtn:hover, .newGameBtn:hover, #startGame:hover {
     color: #00afb9;
 }
 
